contrib/organice-k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: organice
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    name: organice
